# tapo-c210-monitor

./: .env.example  .gitignore  ANDROID_AGENT_PLAN.md  CLAUDE.md  CONTEXT_TRANSFER.md  CONVERSATION_HISTORY.md  KNOWN_ISSUES.md  PLAN.md  README.md  SESSION_2025-01-08.md  TAPO_UI_AUTOMATION_PLAN.md  agents.md  main.py  pyproject.toml
docs/: TAPO_APP_INTERNALS.md
ringbuffer/: README.md  go.mod  main.go
screenshots/login-flow/: README.md
scripts/: discover_camera.sh  explore_onvif_capabilities.py  pan_experiment_v2.py  run_pan_experiment.py  start_ringbuffer.sh  test_all_ptz_protocols.py  test_pytapo_pan.py
src/tapo_c210_monitor/: __init__.py  camera.py  change_detector.py  discovery.py  stream.py  sync.py
ui-exploration/: NAVIGATION_QUICK_REF.md  SESSION_2026-01-11.md  TIMING_GUIDE.md  user-actions.md
ui-exploration/action-maps/: camera-live-actions.md  home-actions.md  me-tab-actions.md  smart-tab-actions.md
ui-exploration/orchestrator/: consensus.md  state.md  work-queue.md
ui-exploration/screens/: _index.md  add-device-popup-worker-2.md  camera-live-worker-1.md  camera-live-worker-2.md  camera-live.md  camera-memory-deep-worker2.md  cameras-tab-worker-1.md  family-picker-popup-worker-2.md  home-worker-1.md  home-worker-2.md  home.md  login-flow.md  me-tab-worker-1.md  me-tab-worker-2.md  me-tab.md  notifications-worker-2.md  pan-tilt-controls-worker1.md  photo-capture-worker1.md  playback-download-deep-worker2.md  playback-download-worker1.md  recording-workflow-worker1.md  room-management-popup-worker-2.md  smart-tab-worker-1.md  smart-tab-worker-2.md  (+5 more)
(+26 files in other folders)
