[project]
name = "tapo-c210-monitor"
version = "0.1.0"
description = "Intelligent LLM-powered monitoring system for Tapo C210 camera"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "numpy>=1.26.0",
    "onvif-zeep>=0.2.12",
    "opencv-python>=4.12.0.88",
    "pillow>=12.1.0",
    "pure-python-adb>=0.3.0.dev0",
    "pytapo>=3.3.54",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "uiautomator2>=3.5.0",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tapo_c210_monitor"]
